--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to My new Website</h1>
     <p>This is a basic HTML template.</p>
     <script src="script.js"></script>
 </body>
