--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -16,6 +16,16 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, maxime iure?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
+
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Illo a explicabo minus deleniti minima deserunt dignissimos cum delectus dolor assumenda veniam, maxime praesentium saepe. 
+            Recusandae accusamus harum reprehenderit placeat repudiandae maxime fuga aliquam expedita?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, possimus!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, maxime iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
     
 </body>
 </html>
